--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
+    gtag('consent', 'default', {
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'analytics_storage': 'denied'
+    });
     gtag('js', new Date());
     // Configuration is handled by react-ga4
   </script>
