--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
   <title>The Great Chronicle of Buddhas</title>
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9S5X87MCEZ"></script>
+  <!-- Google Analytics & Tag Manager -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -25,9 +24,22 @@
       'ad_personalization': 'denied',
       'analytics_storage': 'denied'
     });
+
+    // Google Tag Manager
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-T73CLXFH');
+    // End Google Tag Manager
+
     gtag('js', new Date());
-    // Configuration is handled by react-ga4
+    gtag('config', 'G-9S5X87MCEZ'); 
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9S5X87MCEZ"></script>
 
   <!-- Preconnect to Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,6 +89,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T73CLXFH" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
